Added edit functionality

--- a/DreamListener/DreamListener/Base.lproj/Main.storyboard
+++ b/DreamListener/DreamListener/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 <rect key="frame" x="16" y="108" width="343" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="150" id="nNa-jd-UYA" customClass="ItemCell" customModule="DreamListener" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="150" id="nNa-jd-UYA" customClass="ItemCell" customModule="DreamListener" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nNa-jd-UYA" id="IS2-ph-yvH">
@@ -168,7 +168,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="doU-N7-GGh">
                                 <rect key="frame" x="172.5" y="318.5" width="30" height="30"/>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w2o-TB-7mJ" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w2o-TB-7mJ" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
                                 <rect key="frame" x="124" y="82" width="235" height="44"/>
                                 <color key="backgroundColor" red="0.85576546034484946" green="0.85576546034484946" blue="0.85576546034484946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -178,7 +178,7 @@
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7f-Ym-ABC" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7f-Ym-ABC" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
                                 <rect key="frame" x="124" y="134" width="235" height="44"/>
                                 <color key="backgroundColor" red="0.8557654603" green="0.8557654603" blue="0.8557654603" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -191,7 +191,7 @@
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Details" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PBg-b0-eq7" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Details" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PBg-b0-eq7" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
                                 <rect key="frame" x="16" y="186" width="343" height="107"/>
                                 <color key="backgroundColor" red="0.8557654603" green="0.8557654603" blue="0.8557654603" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
